--- a/simple_app_dockerization.yml
+++ b/simple_app_dockerization.yml
@@ -6,8 +6,18 @@
         name: docker.io
         state: present
 
-    - name: delete old image and container
-      shell: docker stop simpleapp && docker rm  simpleapp && docker rmi simpleapp
+    - name: Check if container exists
+      shell: docker ps -a --filter "name=simpleapp" --format "{{"{{"}}.Names{{"}}"}}"
+      register: container_exists
+      changed_when: false
+      ignore_errors: true
+
+    - name: Delete old container and image
+      shell: |
+        docker stop simpleapp
+        docker rm simpleapp
+        docker rmi simpleapp
+      when: "'simpleapp' in container_exists.stdout"
 
     - name: Build simple app image
       shell: cd simpleApp && docker build -t simpleapp .
